[package]
name = "roundhay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.28.*", features=["full"]}
axum = {version="0.6.*"}
tower-http = {version="0.4.*", features=["fs"]}
tracing-subscriber = {version="0.3.17"}
serde = {version="1.0.*", features=["derive"]}
serde_json = {version="1.0.*"}